--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,8 @@
     height: 100vh;
     width: 100vw;
     text-align: center;
-    background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+    background: linear-gradient(125deg, hsla(160.24,44.57%,63.92%,1) 0%, hsla(332.2,44.57%,63.92%,1) 100%);
+
 }
 
 /* Main wrapper - this centers the device */
