--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 
 /* background and center device */
 #root {
-    height: 100vh;
+    height: 103vh;
     width: 100vw;
     text-align: center;
     background: linear-gradient(125deg, hsla(160.24,44.57%,63.92%,1) 0%, hsla(332.2,44.57%,63.92%,1) 100%);
@@ -42,6 +42,10 @@ button {
     min-width: 150px;
 }
 
+a {
+    color: #79CCB0;
+}
+
 h1.hallo {
     font-family: Playwrite CA, serif;
 }
@@ -75,10 +79,10 @@ h1.hallo {
     animation-delay: 0s, 0s;
 }
 .line:nth-child(3) { /* because <br> counts as a child */
-    animation-delay: 1s, 1s;
+    animation-delay: 0.55s, 0.55s;
 }
 .line:nth-child(5) {
-    animation-delay: 2s, 2s;
+    animation-delay: 1.1s, 1.1s;
 }
 
 /* Typewriter effect */
